tests/sema/fail/fallible_cast_unhandled.kl
// RUN: check
// COMPILE-FAIL
// EXPECT-EXIT: 65

int main() {
  int n = int("xyz");
  return n;
}
